--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background: #ecf0fe;
+    background: #2c3e50;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -23,13 +23,18 @@ body {
 
 li {
     list-style: none;
+    color: #fff;
 }
 
 .form,
-.grettings {
+.greetings {
     display: none;
 }
 
+.greetings {
+    color: #fff;
+    font-size: 2rem;
+}
 .showing {
     display: block;
 }
@@ -40,10 +45,41 @@ li {
 
 
 .clock_container h1 {
-    font-size: 4rem;
-    /* color: #fff; */
+    font-size: 5rem;
+    color: #fff;
     margin-bottom: 3rem;    
 }
 
 
 
+.bg_img {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+z-index: -1;
+animation: fadeIn .4s linear;
+} 
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.todo_container {
+    margin-top: 2rem;
+}
+
+.weather {
+    z-index: 10;
+    color: #fff;
+    font-size: 1rem;
+    position: absolute;
+    top: 5%;
+    right: 5%;
+}
